--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
