--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
+    "draft-js": "^0.11.7",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
