--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.9",
-    "autoprefixer": "^10.4.17",
-    "axios": "^1.6.7",
-    "draft-js": "^0.11.7",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "postcss": "^8.4.38",
+    "quill": "^2.0.0-rc.2",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.21.3",
-    "react-slick": "^0.30.1",
+    "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1"
   },
@@ -34,11 +32,11 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.3"
+    "vite": "^5.2.2"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "tailwind.config.js",
